front page done

--- a/src/styles/1-helpers/_animation.sass
+++ b/src/styles/1-helpers/_animation.sass
@@ -10,3 +10,13 @@
   
   100% 
     width: 0%;
+@keyframes opacityToFull
+  0% 
+    opacity: 0;
+  100% 
+    opacity: 100%;
+@keyframe opacityToZero
+  0% 
+    opacity: 100%;
+  100% 
+    opacity: 0;
