--- a/src/styles/4-layout/_header.sass
+++ b/src/styles/4-layout/_header.sass
@@ -1,10 +1,33 @@
 header 
   background-color: $headerFooterColor
   display: flex;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
   img 
     width: 84px;
     height: 102px;
     margin-left: 5%;
     margin-top: 25px;
     margin-bottom: 25px;
- 
+.header-scroll-up
+  opacity: 100%;
+  transition: opacity 1s;
+.header-scroll-down
+  opacity: 0;
+  transition: opacity 1s;
+
+@media screen and ( max-width: 765px ) 
+  header
+    img
+      height: 50px;
+      width: auto;
+      margin-top: 10px;
+      margin-bottom: 10px
+      margin-left: 3%;
+  .header-scroll-up
+    opacity: 100%;
+    transition: none;
+  .header-scroll-down
+    opacity: 100%;
+    transition: none;
