--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -15,6 +15,9 @@
 @import '/4-layout/navigation';
 
 // 5 - MOUDLES
+@import '/5-modules/hero'
+@import '/5-modules/recentProjectItem'
+@import '/5-modules/recentProjects'
 
 // 6 - PAGES
 @import '/6-pages/homePage';
