--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -18,6 +18,7 @@
 @import '/5-modules/hero'
 @import '/5-modules/recentProjectItem'
 @import '/5-modules/recentProjects'
+@import '/5-modules/contactPageBanner'
 
 // 6 - PAGES
 @import '/6-pages/homePage';
