--- a/src/styles/1-helpers/_variables.sass
+++ b/src/styles/1-helpers/_variables.sass
@@ -1,2 +1,4 @@
-$headerFooterColor: #262728
-$callToActionColor: #A1BBC4
+$headerFooterColor: #262728;
+$callToActionColor: #A1BBC4;
+$orangeHighlight: #ff5800;
+$headerHeight: 160px;
