header colors added

--- a/src/styles/4-layout/_header.sass
+++ b/src/styles/4-layout/_header.sass
@@ -9,20 +9,20 @@ header
     width: 84px;
     height: 102px;
     margin-left: 5%;
-.header-space-bar
-  width: 100%;
-  height: $headerHeight;
-  
 .white-header
   background-color: white;
   color: $headerFooterColor;
-  .header-space-bar
-    background-color: white;
+.header-space-bar-white
+  background-color: white;
+  width: 100%;
+  height: $headerHeight;
 .black-header
   background-color: $headerFooterColor;
   color: white;
-  .header-space-bar
-    background-color: $headerFooterColor;
+.header-space-bar-black
+  background-color: $headerFooterColor;
+  width: 100%;
+  height: $headerHeight;
 
 .header-scroll-up
   opacity: 100%;
