--- a/src/styles/6-pages/_submitInfo.sass
+++ b/src/styles/6-pages/_submitInfo.sass
@@ -1,13 +1,25 @@
 .submit-info
-
+  margin-top: 50px;
   .contact-wrap
     margin-left: auto;
-    margin-right: 10%; 
-    display: flex;
-    justify-content: space-evenly
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px; 
+    max-width: 1250px;
+    display: grid;
+    grid-column-gap: 60px; 
+    grid-template-columns: auto auto;
     .contact-info
       color: $headerFooterColor;
       font-size: 22px;
+      .contact-sub-header
+        font-size: 21px;
+        font-weight: 500;
+        margin-bottom: 10px;
+      .contact-dump
+        font-size: 20px;
+        padding-bottom: 35px;
+        border-bottom: 2px solid black;
   .form-wrap
     background-color: #f0f2f4; 
     margin-right: 30%;
