mobile header fixed

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -12,6 +12,7 @@
 // 4 - LAYOUT
 @import '/4-layout/footer';
 @import '/4-layout/header';
+@import '/4-layout/headerMobile';
 @import '/4-layout/navigation';
 
 // 5 - MOUDLES
