--- a/src/styles/4-layout/_header.sass
+++ b/src/styles/4-layout/_header.sass
@@ -33,15 +33,8 @@ header
 
 @media screen and ( max-width: 765px ) 
   header
-    img
-      height: 50px;
-      width: auto;
-      margin-top: 10px;
-      margin-bottom: 10px
-      margin-left: 3%;
-  .header-scroll-up
-    opacity: 100%;
-    transition: none;
-  .header-scroll-down
-    opacity: 100%;
-    transition: none;
+    display: none;
+  .header-space-bar-black
+    display: none;
+  .header-space-bar-white
+    display: none;
