front page done

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -17,10 +17,13 @@
 
 // 5 - MOUDLES
 @import '/5-modules/hero'
-@import '/5-modules/recentProjectItem'
-@import '/5-modules/recentProjects'
-@import '/5-modules/contactPageBanner'
+@import '/5-modules/HomePage/recentProjectItem';
+@import '/5-modules/HomePage/recentProjects';
+@import '/5-modules/ContactPage/contactPageBanner';
+@import '/5-modules/ProjectPage/projectPageProject';
 
 // 6 - PAGES
 @import '/6-pages/homePage';
 @import '/6-pages/submitInfo';
+@import '/6-pages/projectPage';
+
