--- a/src/styles/4-layout/_header.sass
+++ b/src/styles/4-layout/_header.sass
@@ -5,10 +5,12 @@ header
   width: 100%;
   z-index: 10;
   height: $headerHeight;
-  img 
-    width: 84px;
-    height: 102px;
+  a
+    color: white;
     margin-left: 5%;
+    h1 
+      margin-top: 0;
+      margin-bttom: 0;
 .white-header
   background-color: white;
   color: $headerFooterColor;
