--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -16,14 +16,20 @@
 @import '/4-layout/navigation';
 
 // 5 - MOUDLES
-@import '/5-modules/hero'
+@import '/5-modules/hero';
 @import '/5-modules/HomePage/recentProjectItem';
 @import '/5-modules/HomePage/recentProjects';
 @import '/5-modules/ContactPage/contactPageBanner';
 @import '/5-modules/ProjectPage/projectPageProject';
+@import '/5-modules/GamePage/tic-tac-toe/gameBoard';
+@import '/5-modules/GamePage/tic-tac-toe/square';
+@import '/5-modules/GamePage/maze/mazeBoard';
+@import '/5-modules/GamePage/maze/mazeTile';
+
 
 // 6 - PAGES
 @import '/6-pages/homePage';
 @import '/6-pages/submitInfo';
 @import '/6-pages/projectPage';
+@import '/6-pages/gamePage';
 
