--- a/src/styles/4-layout/_footer.sass
+++ b/src/styles/4-layout/_footer.sass
@@ -4,7 +4,7 @@ footer
   color: white
   .footer-wrap
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr ;
     .footer-sub
       display: flex;
       flex-direction: column;
@@ -13,11 +13,20 @@ footer
       h4
         font-size: 32px;
         margin-bottom: 30px;
+      a
+        color: white;
       ul 
         padding: 0;
         margin-top: 0;
         list-style: none;
         text-align: center;
+      .footer-socials
+        display: flex;
+        justify-content: center;
+        a
+          font-size: 30px;
+          margin-right: 15px;
+          margin-left: 15px;
 @media screen and ( max-width: 775px )
   footer
     padding-left: 5%; 
