--- a/src/styles/6-pages/_projectPage.sass
+++ b/src/styles/6-pages/_projectPage.sass
@@ -1,6 +1,35 @@
 .project-page
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   .project-page-projects
     margin: 10%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 3%;
+
+
+@media screen and ( max-width: 1700px )
+  .project-page
+    .project-page-projects
+      grid-template-columns: 1fr 1fr;
+@media screen and ( max-width: 1160px )
+  .project-page
+    .project-page-projects
+      grid-template-columns: 1fr;
+
+@media screen and ( max-width: 700px )
+  .project-page
+    .project-page-projects
+      margin-left: 5%;
+      margin-right: 5%;
+@media screen and ( max-width: 550px )
+  .project-page
+    .project-page-projects
+      margin-left: 2%;
+      margin-right: 2%;
+@media screen and ( max-width: 400px )
+  .project-page
+    .project-page-projects
+      margin-left: 0;
+      margin-right: 0;
