--- a/src/styles/6-pages/_projectPage.sass
+++ b/src/styles/6-pages/_projectPage.sass
@@ -4,6 +4,7 @@
   justify-content: center;
   .project-page-projects
     margin: 10%;
+    margin-bottom: 0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 3%;
