project page title fixed, project page responsiveness fixed, footer padding fixed, submit info page name changed to contact

--- a/src/styles/6-pages/_contactInfo.sass
+++ b/src/styles/6-pages/_contactInfo.sass
@@ -1,4 +1,4 @@
-.submit-info
+.contact-info-page
   margin-top: 50px;
   .contact-wrap
     margin-left: auto;
@@ -8,9 +8,10 @@
     padding-right: 15px; 
     max-width: 1250px;
     display: flex;
-    flex-direction: column;
     grid-column-gap: 60px; 
     grid-template-columns: auto auto;
+    .location
+      margin-left: auto;
     .contact-info
       color: $headerFooterColor;
       font-size: 22px;
