--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -29,7 +29,7 @@
 
 // 6 - PAGES
 @import '/6-pages/homePage';
-@import '/6-pages/submitInfo';
+@import '/6-pages/contactInfo';
 @import '/6-pages/projectPage';
 @import '/6-pages/gamePage';
 
