--- a/src/styles/4-layout/_footer.sass
+++ b/src/styles/4-layout/_footer.sass
@@ -1,5 +1,5 @@
 footer
-  padding: 3% 10% 3% 10%
+  padding: 5% 10% 5% 10%
   background-color: $headerFooterColor
   color: white
   .footer-wrap
@@ -13,6 +13,7 @@ footer
       h4
         font-size: 32px;
         margin-bottom: 30px;
+        margin-top: 0;
       a
         color: white;
       ul 
