--- a/src/styles/5-modules/ContactPage/_contactPageBanner.sass
+++ b/src/styles/5-modules/ContactPage/_contactPageBanner.sass
@@ -1,61 +1,55 @@
 .contact-page-banner-wrap
-  padding-top: 5%;
+  padding-top: 4%;
   padding-bottom: 4%;
-  margin-right: auto;
-  margin-left: auto;
-  display: flex;
-  justify-content: center;
   background-color: $callToActionColor;
-  .contact-page-banner
-    max-width: 1250px;
-    flex-grow: 4;
-    p
-      margin-top: 0;
-      margin-right: 20%;
-      margin-bottom: 0;
-      font-size: 45px;
-      color: $headerFooterColor;
-      line-height: 55px;
-    .contact-page-arrow-link
-      display: flex;
-      font-size: 40px;
-      font-weight: 700;
-      color: $headerFooterColor;
-      p
-        margin-top: 50px;
-        margin-bottom: 0;
-        margin-right: 0;
-        line-height: 45px;
-      svg
-        margin-top: auto;
-        font-weight: 300;
-        margin-left: 20px;
-@media screen and ( max-width:  975px)
-  .contact-page-banner-wrap
-    margin-right: 0;
-    margin-left: 0;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    padding-right: 10%;
-    padding-left: 10%;
+  a
     .contact-page-banner
+      max-width: 1250px;
+      margin-left: 5%;
       p
-        margin-right: 0;
-        font-size: 40px;
-        line-height: 45px;
+        margin-top: 0;
+        margin-right: 20%;
+        margin-bottom: 0;
+        font-size: 45px;
+        color: $headerFooterColor;
+        line-height: 55px;
       .contact-page-arrow-link
-        font-size: 25px;
+        display: flex;
+        font-size: 40px;
+        font-weight: 700;
+        color: $headerFooterColor;
         p
-          line-height: 35px;
-@media screen and ( max-width: 775px )
+          margin-top: 50px;
+          margin-bottom: 0;
+          margin-right: 0;
+          line-height: 45px;
+        svg
+          margin-top: auto;
+          font-weight: 300;
+          margin-left: 20px;
+
+@media screen and ( max-width:  975px)
   .contact-page-banner-wrap
     padding-right: 8%;
     padding-left: 8%;
-    .contact-page-banner
-      p
-        font-size: 32px;
-        line-height: 34px;
-      .contact-page-arrow-link
+    a
+      .contact-page-banner
         p
-          font-size: 29px;    
-          line-height: 32px;        
+          margin-right: 0;
+          font-size: 40px;
+          line-height: 45px;
+        .contact-page-arrow-link
+          font-size: 25px;
+          p
+            line-height: 35px;
+@media screen and ( max-width: 775px )
+  .contact-page-banner-wrap
+    a 
+      .contact-page-banner
+        p
+          font-size: 32px;
+          line-height: 34px;
+        .contact-page-arrow-link
+          p
+            font-size: 29px;    
+            line-height: 32px;        
