--- a/src/styles/5-modules/ProjectPage/_projectPageProject.sass
+++ b/src/styles/5-modules/ProjectPage/_projectPageProject.sass
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 15%;
     .project-page-project
       .project-pic
         -webkit-box-shadow: 0px 0px 14px 8px rgba(0,0,0,.3); 
@@ -21,6 +21,12 @@
         border-bottom: 1px solid black;
         padding-bottom: 30px;
         margin-bottom: 0;
-      h5
-
-
+@media screen and ( max-width: 625px )
+  .project-page-project-wrap
+    margin-left: 0;
+    margin-right: 0;
+    a
+      .project-page-project
+        .project-pic
+          height: 70vw;
+          width: 100%;
