contact page respoinsiveness

--- a/src/styles/4-layout/_headerMobile.sass
+++ b/src/styles/4-layout/_headerMobile.sass
@@ -8,11 +8,11 @@
     .header-mobile-wrap
       display: flex;
       width: 100%;
-      img
+      h1
         height: 50px;
         width: auto;
-        margin-top: 10px;
-        margin-bottom: 10px
+        margin-top: 0;
+        margin-bottom: 0;
         margin-left: 3%;
       .nav-mobile-icon
         display: none;
