--- a/src/styles/5-modules/ContactPage/_contactPageBanner.sass
+++ b/src/styles/5-modules/ContactPage/_contactPageBanner.sass
@@ -1,6 +1,6 @@
 .contact-page-banner-wrap
-  padding-top: 4%;
-  padding-bottom: 4%;
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-color: $callToActionColor;
   a
     .contact-page-banner
