--- a/src/styles/6-pages/_contactInfo.sass
+++ b/src/styles/6-pages/_contactInfo.sass
@@ -4,12 +4,12 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 100px;
-    padding-left: 15px;
-    padding-right: 15px; 
+    padding-left: 10%;
+    padding-right: 10%; 
     max-width: 1250px;
     display: flex;
-    grid-column-gap: 60px; 
-    grid-template-columns: auto auto;
+    // grid-column-gap: 60px; 
+    // grid-template-columns: auto auto;
     .location
       margin-left: auto;
     .contact-info
@@ -52,4 +52,12 @@
         color: white;
         font-size: 18px;
         height: 40px;
-        
+@media screen and ( max-width: 1150px )
+  .contact-info-page
+    margin-top: 50px;
+    .contact-wrap
+      flex-direction: column;
+      .location
+        margin-left: 0;
+
+    
