--- a/src/styles/4-layout/_header.sass
+++ b/src/styles/4-layout/_header.sass
@@ -26,7 +26,7 @@ header
   width: 100%;
   height: $headerHeight;
 .header-scroll-up
-  opacity: 100%;
+  opacity: 100;
   transition: opacity 1s;
 .header-scroll-down
   opacity: 0;
