--- a/src/styles/4-layout/_header.sass
+++ b/src/styles/4-layout/_header.sass
@@ -10,7 +10,7 @@ header
     margin-left: 5%;
     h1 
       margin-top: 0;
-      margin-bttom: 0;
+      margin-bottom: 0;
 .white-header
   background-color: white;
   color: $headerFooterColor;
