--- a/src/styles/4-layout/_footer.sass
+++ b/src/styles/4-layout/_footer.sass
@@ -23,11 +23,11 @@ footer
         text-align: center;
       .footer-socials
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         a
-          font-size: 30px;
-          margin-right: 15px;
-          margin-left: 15px;
+          font-size: 20px;
+          margin-bottom: 5px;
+          text-decoration: underline;
 @media screen and ( max-width: 775px )
   footer
     padding-left: 5%; 
