--- a/src/styles/5-modules/HomePage/_recentProjectItem.sass
+++ b/src/styles/5-modules/HomePage/_recentProjectItem.sass
@@ -3,7 +3,7 @@
   a
     .recent-project-item
       height: 600px;
-      width: auto;
+      width: 450px;
       margin-bottom: 40px;
       background-size: cover;
       .designer-info-wrap
@@ -35,8 +35,8 @@
       position: absolute
       left: 1%;
       top: -1%;
-      width: 100%;
-      height: 100%;
+      width: 450px;
+      height: 600px;
       background-color: rgba(red($orangeHighlight), green($orangeHighlight), blue($orangeHighlight), 0.7);
       z-index: -1;
 @media screen and ( max-width: 1300px )
@@ -44,7 +44,10 @@
     a  
       .recent-project-item
         height: 500px;
-@media screen and ( max-width: 700px )
+      .colored-rectangle
+        height: 500px
+        width: 100%;
+@media screen and ( max-width: 990px )
   .recent-project-wrap
     a  
       .recent-project-item
@@ -53,6 +56,9 @@
           .designer-info
             h3 
               font-size: 20px;
+      .colored-rectangle
+        height: 400px
+        width: 100%;
 
 
         
