--- a/src/styles/5-modules/HomePage/_recentProjects.sass
+++ b/src/styles/5-modules/HomePage/_recentProjects.sass
@@ -1,5 +1,5 @@
 .recent-projects
-  margin-top: 4vw;
+  margin-top: 9vw;
   margin-right: auto;
   margin-left: auto;
   display: flex;
@@ -18,9 +18,15 @@
       grid-row: 1;
       font-size: 45px;
       color: $headerFooterColor;
+      display: flex;
+      justify-content: center;
     .project-col-1
       grid-row: 2/3;
+      display: flex;
+      justify-content: center;
     .project-col-2
+      display: flex;
+      justify-content: center;
       grid-column: 2;
       grid-row: 1 / 3;
 @media screen and ( max-width: 1300px)
@@ -31,7 +37,7 @@
     .recent-projects-wrap
       .test-blue
         grid-row: 2 / 4;
-@media screen and ( max-width: 770px)
+@media screen and ( max-width: 990px)
   .recent-projects
     padding-left: 5%;
     padding-right: 5%;
