--- a/src/styles/4-layout/_footer.sass
+++ b/src/styles/4-layout/_footer.sass
@@ -24,7 +24,9 @@ footer
       .footer-socials
         display: flex;
         flex-direction: column;
+        color: white;
         a
+          color: white;
           font-size: 20px;
           margin-bottom: 5px;
           text-decoration: underline;
