--- a/src/styles/4-layout/_footer.sass
+++ b/src/styles/4-layout/_footer.sass
@@ -21,7 +21,7 @@ footer
         margin-top: 0;
         list-style: none;
         text-align: center;
-      .footer-socials
+      .footer-socialss
         display: flex;
         flex-direction: column;
         color: white;
