--- a/src/styles/5-modules/ProjectPage/_projectPageProject.sass
+++ b/src/styles/5-modules/ProjectPage/_projectPageProject.sass
@@ -5,6 +5,9 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 15%;
+    &:hover
+      text-decoration: none;
+      color: black;
     .project-page-project
       .project-pic
         -webkit-box-shadow: 0px 0px 14px 8px rgba(0,0,0,.3); 
@@ -21,6 +24,8 @@
         border-bottom: 1px solid black;
         padding-bottom: 30px;
         margin-bottom: 0;
+        margin-top: 1em;
+
 @media screen and ( max-width: 625px )
   .project-page-project-wrap
     margin-left: 0;
