--- a/src/styles/4-layout/_header.sass
+++ b/src/styles/4-layout/_header.sass
@@ -8,6 +8,8 @@ header
   a
     color: white;
     margin-left: 5%;
+    &:hover
+      text-decoration: none;
     h1 
       margin-top: 0;
       margin-bottom: 0;
