changed projects  to two columns max

--- a/src/styles/6-pages/_projectPage.sass
+++ b/src/styles/6-pages/_projectPage.sass
@@ -16,13 +16,8 @@
     .project-page-projects
       margin-bottom: 0;
       display: grid;
-      grid-template-columns: 510px 510px 510px;
+      grid-template-columns: 515px 515px;
       grid-gap: 30px
-@media screen and ( max-width: 1700px )
-  .project-page
-    .project-page-wrap
-      .project-page-projects
-        grid-template-columns: 1fr 1fr;
 @media screen and ( max-width: 1160px )
   .project-page
     .project-page-wrap
