--- a/src/styles/5-modules/HomePage/_recentProjectItem.sass
+++ b/src/styles/5-modules/HomePage/_recentProjectItem.sass
@@ -51,7 +51,9 @@
   .recent-project-wrap
     a  
       .recent-project-item
+        margin-bottom: 0;
         height: 400px;
+        max-width: 100vw;
         .designer-info-wrap
           .designer-info
             h3 
@@ -59,6 +61,23 @@
       .colored-rectangle
         height: 400px
         width: 100%;
+@media screen and ( max-width: 550px )
+  .recent-project-wrap
+    max-width: 100vw;
+    a  
+      .recent-project-item
+        height: 300px;
+        .designer-info-wrap
+          .designer-info
+            padding-left: 15px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            h3 
+              font-size: 1em;
+      .colored-rectangle
+        display: none;
+    
 
 
         
