--- a/src/styles/5-modules/HomePage/_recentProjectItem.sass
+++ b/src/styles/5-modules/HomePage/_recentProjectItem.sass
@@ -15,18 +15,22 @@
           padding-left: 30px;
           position: absolute;
           bottom: 0;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
           background-color: white;
           width: 60%;
           h5 
-            font-size: 20px;
+            font-size: 25px;
             font-weight: 400;
             margin-top: 20px;
             margin-bottom: 10px;
           h3 
-            font-size: 25px
+            font-size: 20px
             margin-top: 0;
             margin-bottom: 50px;
     &:hover
+      color: black;
       .colored-rectangle
         left: 3%;
         top: -3%;
@@ -70,9 +74,6 @@
         .designer-info-wrap
           .designer-info
             padding-left: 15px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
             h3 
               font-size: 1em;
       .colored-rectangle
