updates and style changes

--- a/src/styles/1-helpers/_animation.sass
+++ b/src/styles/1-helpers/_animation.sass
@@ -1,11 +1,11 @@
 @keyframes widthGrow 
   0% 
-    width: 0;
+    width: 0
   100% 
-    width: 100%;
+    width: 100%
 @keyframes widthShrink 
   0% 
-    width: 100%;
+    width: 100%
   100% 
-    width: 0%;
+    width: 0%
   
