--- a/src/styles/4-layout/_header.sass
+++ b/src/styles/4-layout/_header.sass
@@ -1,42 +1,42 @@
 header 
-  display: flex;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  z-index: 10;
-  height: $headerHeight;
+  display: flex
+  align-items: center
+  position: fixed
+  width: 100%
+  z-index: 10
+  height: $headerHeight
   a
-    color: white;
-    margin-left: 5%;
+    color: white
+    margin-left: 5%
     &:hover
-      text-decoration: none;
+      text-decoration: none
     h1 
-      margin-top: 0;
-      margin-bottom: 0;
+      margin-top: 0
+      margin-bottom: 0
 .white-header
-  background-color: white;
-  color: $headerFooterColor;
+  background-color: white
+  color: $headerFooterColor
 .header-space-bar-white
-  background-color: white;
-  width: 100%;
-  height: $headerHeight;
+  background-color: white
+  width: 100%
+  height: $headerHeight
 .black-header
-  background-color: $headerFooterColor;
-  color: white;
+  background-color: $headerFooterColor
+  color: white
 .header-space-bar-black
-  background-color: $headerFooterColor;
-  width: 100%;
-  height: $headerHeight;
+  background-color: $headerFooterColor
+  width: 100%
+  height: $headerHeight
 .header-scroll-up
-  opacity: 100;
-  transition: opacity 1s;
+  opacity: 100
+  transition: opacity 1s
 .header-scroll-down
-  opacity: 0;
-  transition: opacity 1s;
+  opacity: 0
+  transition: opacity 1s
 @media screen and ( max-width: 765px ) 
   header
-    display: none;
+    display: none
   .header-space-bar-black
-    display: none;
+    display: none
   .header-space-bar-white
-    display: none;
+    display: none
