--- a/src/styles/4-layout/_navigation.sass
+++ b/src/styles/4-layout/_navigation.sass
@@ -1,36 +1,36 @@
 .nav-web
-  margin-left: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-left: auto
+  display: flex
+  justify-content: center
+  align-items: center
   a
-    color: white;
-    font-size: 20px;
-    line-height: 20px;
-    margin-right: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: white
+    font-size: 20px
+    line-height: 20px
+    margin-right: 80px
+    display: flex
+    justify-content: center
+    align-items: center
     .text-white
-      color: white;
+      color: white
     .text-black
-      color: $headerFooterColor;
+      color: $headerFooterColor
     .nav-item-hover-wrap
-      margin-top: 2px;
-      margin-right: 10px;
-      height: 4px;
-      width: 30px;
+      margin-top: 2px
+      margin-right: 10px
+      height: 4px
+      width: 30px
       .nav-item-hover
-        float: right;
-        width: 0%;
-        height: 100%;
-        background-color: #ff5800;
+        float: right
+        width: 0%
+        height: 100%
+        background-color: #ff5800
       .on-enter
-        animation: widthGrow .2s forwards;
+        animation: widthGrow .2s forwards
       .on-exit
-        animation: widthShrink .2s;
+        animation: widthShrink .2s
 @media screen and ( max-width: 765px ) 
   .nav-web
-    display: none;
+    display: none
 
   
