--- a/src/styles/5-modules/GamePage/maze/_mazeTile.sass
+++ b/src/styles/5-modules/GamePage/maze/_mazeTile.sass
@@ -1,11 +1,11 @@
 .maze-tile
-  width: 100%;
-  height: 100%;
+  width: 100%
+  height: 100%
 .white-tile
 .black-tile
   background-color: $headerFooterColor
 .start-tile
-  background-color: #00ff58;
+  background-color: #00ff58
 .end-tile
-  background-color: #ff0028;
+  background-color: #ff0028
   
