--- a/src/styles/5-modules/GamePage/tic-tac-toe/_gameBoard.sass
+++ b/src/styles/5-modules/GamePage/tic-tac-toe/_gameBoard.sass
@@ -1,42 +1,42 @@
 .game-board-wrap
-  margin-top: 50px;
-  margin-bottom: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-top: 50px
+  margin-bottom: 50px
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
   .game-board-items
-    background-color: white;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
-    -webkit-box-shadow: 0px 0px 14px 8px rgba(0,0,0,.08); 
-    box-shadow: 0px 0px 14px 8px rgba(0,0,0,.08);
+    background-color: white
+    padding-left: 15px
+    padding-right: 15px
+    padding-bottom: 15px
+    -webkit-box-shadow: 0px 0px 14px 8px rgba(0,0,0,.08) 
+    box-shadow: 0px 0px 14px 8px rgba(0,0,0,.08)
     h2
-      border-bottom: 1px solid black;
-      padding-bottom: 15px;
+      border-bottom: 1px solid black
+      padding-bottom: 15px
     h3
-      color: $headerFooterColor;
-      margin-left: 3px;
-      margin-bottom: 0;
-      margin-top: 0;
+      color: $headerFooterColor
+      margin-left: 3px
+      margin-bottom: 0
+      margin-top: 0
       span
-        font-weight: 400;
+        font-weight: 400
     .reset-button
-      margin-left: 3px;
-      margin-top: 10px;
-      padding: 5px;
-      cursor: pointer;
-      background-color: $orangeHighlight;
-      border: none;
-      border-radius: 2px;
-      outline: none;
-      color: white;
-      font-size: 20px;
+      margin-left: 3px
+      margin-top: 10px
+      padding: 5px
+      cursor: pointer
+      background-color: $orangeHighlight
+      border: none
+      border-radius: 2px
+      outline: none
+      color: white
+      font-size: 20px
     .game-board
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
+      margin-top: 20px
+      display: flex
+      flex-direction: column
       .row
-        display: flex;
-        flex-direction: row;
+        display: flex
+        flex-direction: row
