--- a/src/styles/5-modules/HomePage/_recentProjects.sass
+++ b/src/styles/5-modules/HomePage/_recentProjects.sass
@@ -1,55 +1,55 @@
 .recent-projects
-  margin-top: 9vw;
-  margin-right: auto;
-  margin-left: auto;
-  display: flex;
-  justify-content: center;
+  margin-top: 9vw
+  margin-right: auto
+  margin-left: auto
+  display: flex
+  justify-content: center
   .recent-projects-wrap
-    max-width: 1250px;
-    width: 100%;
-    display: grid;
-    grid-gap: 40px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
+    max-width: 1250px
+    width: 100%
+    display: grid
+    grid-gap: 40px
+    grid-template-columns: 1fr 1fr
+    grid-template-rows: auto auto auto
     h3
-      margin-top: 0;
-      margin-bottom: 40px;
-      grid-column: 1 / 2;
-      grid-row: 1;
-      font-size: 45px;
-      color: $headerFooterColor;
-      display: flex;
-      justify-content: center;
+      margin-top: 0
+      margin-bottom: 40px
+      grid-column: 1 / 2
+      grid-row: 1
+      font-size: 45px
+      color: $headerFooterColor
+      display: flex
+      justify-content: center
     .project-col-1
-      grid-row: 2/3;
-      display: flex;
-      justify-content: center;
+      grid-row: 2/3
+      display: flex
+      justify-content: center
     .project-col-2
-      display: flex;
-      justify-content: center;
-      grid-column: 2;
-      grid-row: 1 / 3;
+      display: flex
+      justify-content: center
+      grid-column: 2
+      grid-row: 1 / 3
 @media screen and ( max-width: 1300px)
   .recent-projects
-    max-width: none;
-    padding-left: 2%;
-    padding-right: 2%;
+    max-width: none
+    padding-left: 2%
+    padding-right: 2%
     .recent-projects-wrap
-      margin-bottom: 40px;
+      margin-bottom: 40px
       .test-blue
-        grid-row: 2 / 4;
+        grid-row: 2 / 4
 @media screen and ( max-width: 990px)
   .recent-projects
-    padding-left: 5%;
-    padding-right: 5%;
-    margin-top: 40px;
+    padding-left: 5%
+    padding-right: 5%
+    margin-top: 40px
     .recent-projects-wrap
-      display: flex;
-      flex-direction: column;
+      display: flex
+      flex-direction: column
       .proj-item 
         h3 
-          margin-bottom: 0;
+          margin-bottom: 0
 @media screen and ( max-width: 550px )
   .recent-projects
-    overflow: hidden;
-    padding: 0;
+    overflow: hidden
+    padding: 0
