--- a/src/styles/6-pages/_contactInfo.sass
+++ b/src/styles/6-pages/_contactInfo.sass
@@ -1,63 +1,63 @@
 .contact-info-page
-  margin-top: 50px;
+  margin-top: 50px
   .contact-wrap
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 100px;
-    padding-left: 10%;
-    padding-right: 10%; 
-    max-width: 1250px;
-    display: flex;
-    // grid-column-gap: 60px; 
-    // grid-template-columns: auto auto;
+    margin-left: auto
+    margin-right: auto
+    margin-bottom: 100px
+    padding-left: 10%
+    padding-right: 10% 
+    max-width: 1250px
+    display: flex
+    // grid-column-gap: 60px 
+    // grid-template-columns: auto auto
     .location
-      margin-left: auto;
+      margin-left: auto
     .contact-info
-      color: $headerFooterColor;
-      font-size: 22px;
+      color: $headerFooterColor
+      font-size: 22px
       .contact-sub-header
-        font-size: 21px;
-        font-weight: 500;
-        margin-bottom: 10px;
+        font-size: 21px
+        font-weight: 500
+        margin-bottom: 10px
       .contact-dump
-        font-size: 20px;
-        padding-bottom: 35px;
+        font-size: 20px
+        padding-bottom: 35px
       .border-top-wrap
-        display: flex;
+        display: flex
         p
-          margin-top: 0;
-          padding-top: 1em;
-          border-top: 2px solid black;
+          margin-top: 0
+          padding-top: 1em
+          border-top: 2px solid black
   .form-wrap
-    background-color: #f0f2f4; 
-    margin-right: 30%;
-    margin-left: 30%;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    background-color: #f0f2f4 
+    margin-right: 30%
+    margin-left: 30%
+    margin-top: 5%
+    margin-bottom: 5%
     form
-      padding: 5%;
-      display: flex;
-      flex-direction: column;
-      border: 1px solid blue-gray;
-      border-radius: 5px;
+      padding: 5%
+      display: flex
+      flex-direction: column
+      border: 1px solid blue-gray
+      border-radius: 5px
       label
-        font-size: 20px;
+        font-size: 20px
       input
-        margin-bottom: 20px;
-        height: 40px;
+        margin-bottom: 20px
+        height: 40px
       button
-        background-color: $orangeHighlight;
-        border: 1px solid $orangeHighlight;
-        border-radius: 2px;
-        color: white;
-        font-size: 18px;
-        height: 40px;
+        background-color: $orangeHighlight
+        border: 1px solid $orangeHighlight
+        border-radius: 2px
+        color: white
+        font-size: 18px
+        height: 40px
 @media screen and ( max-width: 1150px )
   .contact-info-page
-    margin-top: 50px;
+    margin-top: 50px
     .contact-wrap
-      flex-direction: column;
+      flex-direction: column
       .location
-        margin-left: 0;
+        margin-left: 0
 
     
