--- a/src/styles/6-pages/_gamePage.sass
+++ b/src/styles/6-pages/_gamePage.sass
@@ -1,16 +1,16 @@
 .game-page
   background-color: $callToActionColor
   .games
-    padding-top: 100px;
-    padding-bottom: 100px;
-    margin-left: 15%;
-    margin-right: 15%;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
+    padding-top: 100px
+    padding-bottom: 100px
+    margin-left: 15%
+    margin-right: 15%
+    display: grid
+    grid-template-rows: 1fr 1fr
     .maze
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-items: center
       h1
-        position: static;
+        position: static
