--- a/src/styles/6-pages/_projectPage.sass
+++ b/src/styles/6-pages/_projectPage.sass
@@ -1,48 +1,48 @@
 .project-page
-  color: $headerFooterColor;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  color: $headerFooterColor
+  display: flex
+  flex-direction: column
+  justify-content: center
   .project-page-wrap
-    margin: 4% 3%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: 4% 3%
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
     h1
-      text-transform: uppercase;
-      margin-top: 0;
-      margin-bottom: 4%;
+      text-transform: uppercase
+      margin-top: 0
+      margin-bottom: 4%
     .project-page-projects
-      margin-bottom: 0;
-      display: grid;
-      grid-template-columns: 515px 515px;
+      margin-bottom: 0
+      display: grid
+      grid-template-columns: 515px 515px
       grid-gap: 30px
 @media screen and ( max-width: 1160px )
   .project-page
     .project-page-wrap
       .project-page-projects
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr
 @media screen and ( max-width: 700px )
   .project-page
     .project-page-wrap
-      margin: 10% 10%;
+      margin: 10% 10%
       h1
-        margin-bottom: 10%;
+        margin-bottom: 10%
       .project-page-projects
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: 5%
+        margin-right: 5%
 @media screen and ( max-width: 550px )
   .project-page
     .project-page-wrap
       h1
-        font-size: 2.2em;
+        font-size: 2.2em
       .project-page-projects
-        margin-left: 2%;
-        margin-right: 2%;
+        margin-left: 2%
+        margin-right: 2%
 @media screen and ( max-width: 400px )
   .project-page
     .project-page-wrap
       .project-page-projects
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 0
+        margin-right: 0
