--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,36 +1,36 @@
-@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap"
 
 // 1 - HELPERS
-@import '/1-helpers/variables';
+@import '/1-helpers/variables'
 @import '/1-helpers/animation'
+@import '/1-helpers/functions'
 
 // 2 - TOOLS
-@import '/2-tools/normalize';
+@import '/2-tools/normalize'
 
 // 3 - BASICS
 @import '/3-basics/links'
-@import '/3-basics/typography';
+@import '/3-basics/typography'
 
 // 4 - LAYOUT
-@import '/4-layout/footer';
-@import '/4-layout/header';
-@import '/4-layout/headerMobile';
-@import '/4-layout/navigation';
+@import '/4-layout/footer'
+@import '/4-layout/header'
+@import '/4-layout/headerMobile'
+@import '/4-layout/navigation'
 
 // 5 - MOUDLES
-@import '/5-modules/hero';
-@import '/5-modules/HomePage/recentProjectItem';
-@import '/5-modules/HomePage/recentProjects';
-@import '/5-modules/ContactPage/contactPageBanner';
-@import '/5-modules/ProjectPage/projectPageProject';
-@import '/5-modules/GamePage/tic-tac-toe/gameBoard';
-@import '/5-modules/GamePage/tic-tac-toe/square';
-@import '/5-modules/GamePage/maze/mazeBoard';
-@import '/5-modules/GamePage/maze/mazeTile';
-
+@import '/5-modules/hero'
+@import '/5-modules/HomePage/recentProjectItem'
+@import '/5-modules/HomePage/recentProjects'
+@import '/5-modules/ContactPage/contactPageBanner'
+@import '/5-modules/ProjectPage/projectPageProject'
+@import '/5-modules/GamePage/tic-tac-toe/gameBoard'
+@import '/5-modules/GamePage/tic-tac-toe/square'
+@import '/5-modules/GamePage/maze/mazeBoard'
+@import '/5-modules/GamePage/maze/mazeTile'
 
 // 6 - PAGES
-@import '/6-pages/homePage';
-@import '/6-pages/contactInfo';
-@import '/6-pages/projectPage';
-@import '/6-pages/gamePage';
+@import '/6-pages/homePage'
+@import '/6-pages/contactInfo'
+@import '/6-pages/projectPage'
+@import '/6-pages/gamePage'
