--- a/src/styles/4-layout/_footer.sass
+++ b/src/styles/4-layout/_footer.sass
@@ -3,48 +3,52 @@ footer
   background-color: $headerFooterColor
   color: white
   .footer-wrap
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
+    display: flex
+    justify-content: space-around
     .footer-sub
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-size: 20px;
+      display: flex
+      flex-direction: column
+      font-size: toRem(20)
       h4
-        font-size: 32px;
-        margin-bottom: 30px;
-        margin-top: 0;
+        font-size: toRem(32)
+        margin-bottom: 30px
+        margin-top: 0
+        color: $orangeHighlight
       a
-        color: white;
+        color: white
       ul 
-        padding: 0;
-        margin-top: 0;
-        list-style: none;
-        text-align: center;
+        padding: 0
+        margin-top: 0
+        list-style: none
       .footer-socialss
-        display: flex;
-        flex-direction: column;
-        color: white;
+        display: flex
+        flex-direction: column
+        color: white
         a
-          color: white;
-          font-size: 20px;
-          margin-bottom: 5px;
-          text-decoration: underline;
+          color: white
+          margin-bottom: 5px
+          svg
+            margin-right: 10px
 @media screen and ( max-width: 775px )
   footer
-    padding-left: 5%; 
-    padding-right: 5%;
+    padding-left: 5% 
+    padding-right: 5%
+    padding-top: 80px
+    padding-bottom: 80px
     .footer-wrap
-      display: flex;
-      flex-direction: column;
+      display: flex
+      flex-direction: column
       .footer-sub
-        margin-right: auto;
-        align-items: start;
-        font-size: 18px;
+        margin-right: auto
+        align-items: start
+        font-size: toRem(16)
+        &:nth-child(1)
+          margin-bottom: 40px
         h4
-          font-size: 25px;
-          margin-bottom: 15px;
+          font-size: 25px
+          margin-bottom: 15px
         ul
-          text-align: left;
+          text-align: left
+
   
 
