--- a/src/styles/5-modules/ContactPage/_contactPageBanner.sass
+++ b/src/styles/5-modules/ContactPage/_contactPageBanner.sass
@@ -1,55 +1,53 @@
 .contact-page-banner-wrap
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: $callToActionColor;
+  padding-top: 30px
+  padding-bottom: 30px
+  background-color: $callToActionColor
   a
     .contact-page-banner
-      max-width: 1250px;
-      margin-left: 5%;
+      display: flex
+      justify-content: center
       p
-        margin-top: 0;
-        margin-right: 20%;
-        margin-bottom: 0;
-        font-size: 45px;
-        color: $headerFooterColor;
-        line-height: 55px;
+        margin-top: 0
+        margin-bottom: 0
+        font-size: toRem(30)
+        color: $headerFooterColor
+        line-height: 55px
       .contact-page-arrow-link
-        display: flex;
-        font-size: 40px;
-        font-weight: 700;
-        color: $headerFooterColor;
+        display: flex
+
+        font-size: toRem
+        font-weight: 500
+        color: $headerFooterColor
         p
-          margin-top: 50px;
-          margin-bottom: 0;
-          margin-right: 0;
-          line-height: 45px;
+          margin-bottom: 0
+          margin-right: 0
+          line-height: 45px
         svg
-          margin-top: auto;
-          font-weight: 300;
-          margin-left: 20px;
+          font-weight: 300
+          margin-left: 20px
 
 @media screen and ( max-width:  975px)
   .contact-page-banner-wrap
-    padding-right: 8%;
-    padding-left: 8%;
+    padding-right: 8%
+    padding-left: 8%
     a
       .contact-page-banner
         p
-          margin-right: 0;
-          font-size: 40px;
-          line-height: 45px;
+          margin-right: 0
+          font-size: 40px
+          line-height: 45px
         .contact-page-arrow-link
-          font-size: 25px;
+          font-size: 25px
           p
-            line-height: 35px;
+            line-height: 35px
 @media screen and ( max-width: 775px )
   .contact-page-banner-wrap
     a 
       .contact-page-banner
         p
-          font-size: 32px;
-          line-height: 34px;
+          font-size: 32px
+          line-height: 34px
         .contact-page-arrow-link
           p
-            font-size: 29px;    
-            line-height: 32px;        
+            font-size: 29px    
+            line-height: 32px        
