--- a/src/styles/5-modules/GamePage/maze/_mazeBoard.sass
+++ b/src/styles/5-modules/GamePage/maze/_mazeBoard.sass
@@ -1,10 +1,10 @@
 .maze-board-wrap
-  display: flex;
+  display: flex
   .maze-board
-    width: 500px;
-    height: 500px;
-    border: 1px solid black;
-    display: grid;
+    width: 500px
+    height: 500px
+    border: 1px solid black
+    display: grid
     .maze-row
-      display: flex;
-      flex-direction: row;
+      display: flex
+      flex-direction: row
